# test_api

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_11_1049-eeb72f06f879_create_table_authors.py  2025_06_11_1102-379568d8daea_create_table_books.py
app/core/: database.py  settings.py
app/crud/: __init__.py  author.py  book.py
app/models/: __init__.py  author.py  book.py
app/routers/: __init__.py  author.py  book.py
app/schemas/: __init__.py  author.py  book.py
